# robot-arm-sim

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/tests/: test_health.py
backend/typings/mujoco/: __init__.pyi  _constants.pyi  _enums.pyi  _functions.pyi  _specs.pyi  _structs.pyi
backend/typings/mujoco/rendering/classic/: renderer.pyi
docs/: architecture.md  ci.md  robot_arm_simulator_implementation_stages.md
frontend/: .env.example  .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: healthApi.ts
frontend/src/components/system/: BackendHealthCard.tsx
frontend/src/test/: setup.ts
