[project]
name = "robot-arm-simulator-backend"
version = "0.1.0"
description = "FastAPI + MuJoCo backend for a robot arm simulator"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "mujoco",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["typings"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
